--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -56,7 +56,7 @@ See doc/COPYRIGHT.rdoc for more details.
 <% breadcrumb_paths(link_to(l(:label_backlogs), backlogs_project_backlogs_path(@project)), link_to(@sprint.name, backlogs_project_backlogs_path(@sprint))) %>
 
 <div id='rb'>
-  <div id="taskboard">
+  <div id="taskboard" class="taskboard-test">
     <table id="board_header" cellspacing="0">
       <tr>
         <td><%= l(:backlogs_story) %></td>
