--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -42,7 +42,7 @@ See doc/COPYRIGHT.rdoc for more details.
   </div>
   <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
   <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= task.id %>>
-    <div class="t"><%= assignee_name_or_empty(task) %></div>
+    <div class="t"><%= get_task_type(task) %></div>
     <div class="t"><%= task_type_or_empty(task) %></div>
     <div class="v"><%= assignee_id_or_empty(task) %></div>
   </div>
