--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -43,10 +43,10 @@ See doc/COPYRIGHT.rdoc for more details.
   <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
   <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= task.id %>>
     <div class="t"><%= assignee_name_or_empty(task) %></div>
-    <div class="t"><%= type_name_or_empty(task) %></div>
-    <div class="t"><%= priority_name_or_empty(task) %></div>
     <div class="v"><%= assignee_id_or_empty(task) %></div>
   </div>
+  <div class="task_type"><%= type_name_or_empty(task) %></div>
+  <div class="task_priority"><%= priority_name_or_empty(task) %></div>
   <div class="remaining_hours editable<%= ' empty' if remaining_hours(task).blank? %>" fieldname="remaining_hours"><%= remaining_hours(task) %></div>
   <div class="indicator"> </div>
   <div class="meta">
