--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -36,11 +36,14 @@ See doc/COPYRIGHT.rdoc for more details.
 
 <% prevent_edit = User.current.allowed_to?(:update_tasks, defined?(project) ? project : task.project) ? '' : 'prevent_edit'%>
 <div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
+  <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
+
+<div class="stat-fields">
   <div class="id">
     <div class="t"><%= work_package_link_or_empty(task) %></div>
     <div class="v"><%= id_or_empty(task) %></div>
   </div>
-  <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
+  
   <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= task.id %>>
     <div class="t"><%= assignee_name_or_empty(task) %></div>
     <div class="v"><%= assignee_id_or_empty(task) %></div>
@@ -48,11 +51,5 @@ See doc/COPYRIGHT.rdoc for more details.
   <div class="task_type"><%= type_name_or_empty(task) %></div>
   <div class="task_priority"><%= priority_name_or_empty(task) %></div>
   <div class="remaining_hours editable<%= ' empty' if remaining_hours(task).blank? %>" fieldname="remaining_hours"><%= remaining_hours(task) %></div>
-  <div class="indicator"> </div>
-  <div class="meta">
-    <div class="story_id"><%= task.parent_id %></div>
-    <div class="status_id"><%= task.status_id %></div>
-    <div class="previous"><%= task.right_sibling.blank? ? '' : task.right_sibling.id %></div>
-    <%= render :partial => "shared/model_errors", :object => task.errors %>
-  </div>
+</div>
 </div>
