--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -356,3 +356,237 @@
 
   #col_width_input
     max-width: 60px
+
+
+/* Kanban new Design */
+.wp-work-wrapper
+    margin-right: -32px
+    #wp-work 
+        display: table
+        table-layout: fixed
+        width: 100%
+        overflow: hidden
+        #wp-pool-column
+            display: table-cell
+            height: inherit
+            vertical-align: top
+            padding-right: 32px
+            #wp-pool 
+                background: #fff
+                overflow-y: auto
+                position: relative
+                z-index: 1
+                box-sizing: border-box
+                margin-left: -10px
+                margin-right: -10px
+                padding: 20px 0 0 0
+#wp-column-header-group.wp-fixed
+    position: absolute
+    background: #fff
+    z-index: 2
+    left: 0
+    top: 0
+.wp-column-headers, .wp-columns 
+    -moz-box-sizing: border-box
+    -webkit-box-sizing: border-box
+    box-sizing: border-box
+    border-spacing: 10px 0
+    display: table
+    list-style: none
+    margin: 0
+    table-layout: fixed
+    width: 100%
+    padding: 0
+.wp-column-headers .wp-column, .wp-columns .wp-column 
+    background: #F4F5F7
+    -moz-box-sizing: border-box
+    -webkit-box-sizing: border-box
+    box-sizing: border-box
+    display: table-cell
+    list-style: none
+    margin: 0
+    position: relative
+    vertical-align: top
+    padding: 10px
+    -webkit-border-radius: 4px
+    border-radius: 4px
+    font-size: 14px
+.wp-column
+  .wp-column-header-flex
+      display: flex
+      flex-wrap: wrap
+      .wp-column-header-flex-1
+          display: flex
+          max-width: 100%
+  h2
+    color: #5E6C84
+    font-size: 12px
+    font-weight: 600
+    text-transform: uppercase
+    flex: 0 100 auto
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+    margin: 0 5px 0 0
+    word-wrap: break-word
+    padding: 0
+.wp-swimlane-header
+  font-size: 14px
+  line-height: 1.3
+  color: #253858
+  margin: 0 20px 0 10px
+  overflow: hidden
+  padding-left: 13px
+  position: relative
+  .wp-expander
+    bottom: 0
+    cursor: pointer
+    left: 0
+    position: absolute
+    top: 0
+    width: 12px
+  .wp-heading
+    display: inline-block
+    margin: 10px 0
+    max-width: 0
+    vertical-align: middle
+    white-space: nowrap
+    width: 100%
+    a
+      color: #41a3f3
+  .wp-swimlane-avatar
+    margin-right: 5px
+    img
+      display: inline-block
+      vertical-align: text-bottom
+      height: 16px
+      width: 16px
+      max-width: inherit
+  .wp-info
+    margin: 0 5px
+    .aui-lozenge
+      background: #fff
+      border: 1px solid #c1c7d0
+      border-radius: 3px
+      color: #333
+      display: inline-block
+      font-size: 11px
+      font-weight: bold
+      line-height: 99%
+      margin: 0
+      padding: 4px 5px
+      text-align: center
+      text-decoration: none
+      text-transform: uppercase
+    .wp-description
+      color: #5e6c84
+      font-size: 12px
+.wp-columns
+  .wp-column
+    padding: 1px 5px 0
+.wp-parent-group
+  margin: 5px 0
+  border-radius: 3px
+  background: #e4e4e4
+.wp-issue
+  background: #fff
+  border: 0
+  border-radius: 2px
+  box-shadow: 0px 1px 2px 0px rgba(9, 30, 66, 0.25)
+  color: #333
+  cursor: move
+  font-size: 14px
+  margin-top: 5px
+  margin-bottom: 5px
+  padding: 10px
+  position: relative
+  transition: background-color 140ms ease-in-out, border-color 75ms ease-in-out
+  .wp-summary
+    display: block
+    box-sizing: content-box
+    line-height: 1.42857143
+    max-height: 4.28571429em
+    overflow: hidden
+    margin-bottom: 20px
+  .wp-stat-fields
+    display: -webkit-flex
+    display: -ms-flexbox
+    display: flex
+    -webkit-flex-wrap: nowrap
+    -ms-flex-wrap: nowrap
+    flex-wrap: nowrap
+    -webkit-justify-content: space-between
+    -ms-flex-pack: justify
+    -ms-justify-content: space-between
+    justify-content: space-between
+    margin-top: 0
+  .wp-row
+    max-width: 100%
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+    .wp-field
+      + .wp-field
+          margin-left: 5px
+  .wp-field-icon
+    img
+      height: 16px
+      width: 16px
+  .wp-key
+    display: flex
+    min-width: 0
+    line-height: 24px
+    vertical-align: middle
+    margin-right: 5px
+    .wp-issuekey-pkey
+      flex: 0 10000 auto
+      overflow: hidden
+      text-align: right
+      text-overflow: ellipsis
+    .wp-issuekey-number
+      direction: rtl
+      flex: 0 1 auto
+      overflow: hidden
+      text-overflow: ellipsis
+
+.wp-issue .wp-stat-fields > .wp-row.wp-stat-1
+  margin-right: 5px
+  -webkit-flex: 1 0 auto
+  -ms-flex: 1 0 auto
+  flex: 1 0 auto
+.wp-issue .wp-stat-fields > .wp-row.wp-stat-2
+  -webkit-flex: 1 1 auto
+  -ms-flex: 1 1 auto
+  flex: 1 1 auto
+  display: -webkit-flex
+  display: -ms-flexbox
+  display: flex
+  -webkit-flex-direction: row-reverse
+  -ms-flex-direction: row-reverse
+  flex-direction: row-reverse
+.wp-avatar-img
+  -webkit-border-radius: 50%
+  border-radius: 50%
+  font-size: 24px
+  height: 24px
+  line-height: 24px
+  width: 24px
+  cursor: move
+  color: #fff
+  cursor: default
+  display: inline-block
+  text-align: center
+  text-transform: uppercase
+  vertical-align: middle
+aui-badge
+  font-size: 12px
+  font-weight: 600
+  line-height: 16px
+  background-color: #dfe1e6
+  color: #172b4d
+  min-width: 12px
+  border-radius: 2em
+  display: inline-block
+  padding: 3px 5px 2px 5px
+  position: relative
+  text-align: center
