design related changes in taskboard

--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -447,11 +447,14 @@
     width: 12px
   .wp-heading
     display: inline-block
-    margin: 10px 0
+    margin: 10px 0 !important
     max-width: 0
     vertical-align: middle
     white-space: nowrap
-    width: 100%
+    width: 100% !important
+    background-color: transparent !important
+    height: auto !important
+    padding: 0 !important
     a
       color: #41a3f3
   .wp-swimlane-avatar
@@ -483,7 +486,7 @@
       font-size: 12px
 .wp-columns
   .wp-column
-    padding: 1px 5px 0
+    padding: 1px 5px 0 !important
 .wp-parent-group
   margin: 5px 0
   border-radius: 3px
