--- a/app/views/rb_tasks/_task.html.erb
+++ b/app/views/rb_tasks/_task.html.erb
@@ -38,18 +38,20 @@ See doc/COPYRIGHT.rdoc for more details.
 <div class="model work_package task <%= color_contrast_class(task) %> <%= prevent_edit %> <%= mark_if_closed(task) %>" id="work_package_<%= task.id %>" <%= build_inline_style(task) %>>
   <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= task.id %>><%= task.subject %></div>
   
+  
+  
+  
+  <div class="task_type"><img src="https://sanchobbdo.atlassian.net/secure/viewavatar?size=xsmall&amp;avatarId=10316&amp;avatarType=issuetype"><%= type_name_or_empty(task) %></div>
+  <div class="task_priority"><img src="https://sanchobbdo.atlassian.net/images/icons/priorities/major.svg"><%= priority_name_or_empty(task) %></div>
+  <div class="remaining_hours editable<%= ' empty' if remaining_hours(task).blank? %>" fieldname="remaining_hours"><%= remaining_hours(task) %></div>
   <div class="id">
     <div class="t"><%= work_package_link_or_empty(task) %></div>
     <div class="v"><%= id_or_empty(task) %></div>
   </div>
-  
   <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= task.id %>>
     <div class="t"><%= assignee_name_or_empty(task) %></div>
     <div class="v"><%= assignee_id_or_empty(task) %></div>
-  </div>
-  <div class="task_type"><%= type_name_or_empty(task) %></div>
-  <div class="task_priority"><%= priority_name_or_empty(task) %></div>
-  <div class="remaining_hours editable<%= ' empty' if remaining_hours(task).blank? %>" fieldname="remaining_hours"><%= remaining_hours(task) %></div>
+  </div>  
   <div class="indicator"> </div>
   <div class="meta">
     <div class="story_id"><%= task.parent_id %></div>
