--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -323,6 +323,7 @@
     a
       opacity: 1.0
       filter: alpha(opacity = 100)
+      color: #41a3f3
   .editable:hover
     background-color: transparent
   .subject.editable
