--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -435,7 +435,7 @@
   font-size: 14px
   line-height: 1.3
   color: #253858
-  margin: 0 20px 0 10px
+  margin: 0 20px 0 0
   overflow: hidden
   padding-left: 13px
   position: relative
@@ -448,7 +448,7 @@
     width: 12px
   .wp-heading
     display: inline-block
-    margin: 10px 0 !important
+    margin: 10px 0 0 !important
     max-width: 0
     vertical-align: middle
     white-space: nowrap
@@ -486,6 +486,7 @@
       color: #5e6c84
       font-size: 12px
 .wp-columns
+  margin-top: 10px;
   .wp-column
     padding: 1px 5px 0 !important
 .wp-parent-group
@@ -594,3 +595,5 @@ aui-badge
   padding: 3px 5px 2px 5px
   position: relative
   text-align: center
+.story-hide
+  display: none
