--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -486,7 +486,7 @@
       color: #5e6c84
       font-size: 12px
 .wp-columns
-  margin-top: 10px;
+  margin-top: 10px
   .wp-column
     padding: 1px 5px 0 !important
 .wp-parent-group
