--- a/app/views/rb_stories/_story.html.erb
+++ b/app/views/rb_stories/_story.html.erb
@@ -44,8 +44,11 @@ See doc/COPYRIGHT.rdoc for more details.
     <div class="t ellipsis" title="<%= status_label_or_default(story) %>"><%= status_label_or_default(story) %></div>
     <div class="v"><%= status_id_or_default(story) %></div>
   </div>
+  <div class="assigni-name">
+    <%= assignee_name_or_empty(story) %>
+  </div>
   <div class="type_id editable" fieldtype="select" fieldname="type_id" fieldorder="1" field_id=<%= story.id %>>
-    <div class="t"><%= type_name_or_empty(story) %>: </div>
+    <div class="t"><img src="type_icons/<%= (type_name_or_empty(story).to_s.gsub(' ','-').downcase) %>.png"></div>
     <div class="v"><%= type_id_or_empty(story) %></div>
   </div>
   <div class="subject editable ellipsis" fieldname="subject" fieldorder="2" title="<%= h story.subject %>" field_id=<%= story.id %>><%=h story.subject %></div>
