--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -32,7 +32,7 @@
 @mixin story-header
   background-color: #FFFFFF
   font-size: 1rem - rem-calc(5px)
-  opacity: 0.8
+  opacity: 1
   filter: alpha(opacity = 80)
   overflow: hidden
   padding-bottom: 1px
@@ -140,17 +140,25 @@
     &.closed .subject
       text-decoration: line-through
   .work_package, .placeholder
-    background-color: #AFAFAF
     border: none
     cursor: move
     display: block
-    float: left
-    font-size: 10px
-    height: 80px
     margin: 5px
-    padding: 5px
-    position: relative
-    width: 85px
+    background: #fff !important
+    float: none !important
+    width: auto !important
+    height: auto !important
+    border: 0 !important
+    border-radius: 2px !important
+    box-shadow: 0px 1px 2px 0px rgba(9, 30, 66, 0.25) !important
+    color: #333 !important
+    cursor: move !important
+    font-size: 14px !important
+    margin-top: 5px !important
+    margin-bottom: 5px !important
+    padding: 10px !important
+    position: relative !important
+    transition: background-color 140ms ease-in-out, border-color 75ms ease-in-out !important
   .work_package.prevent_edit
     cursor: default
   .placeholder
@@ -164,16 +172,19 @@
     .v
       display: none
     .remaining_hours.editable
-      border: 2px solid #FFFFFF
-      background-color: #EE0000
-      bottom: -5px
-      color: #FFFFFF
-      font-size: 9px
-      height: 13px
-      padding-left: 5px
-      padding-right: 5px
-      position: absolute
-      right: -5px
+      border: 0 !important
+      background-color: #dfe1e6 !important
+      color: #172b4d !important
+      font-size: 12px !important
+      line-height: 16px
+      padding: 3px 5px 2px 5px !important
+      font-weight: 600
+      color: #404040
+      border-radius: 2em
+      min-width: 12px
+      height: auto !important
+      position: initial !important
+      display: inline-block
     .blocks, .remaining_hours.editable.empty
       display: none
     .indicator
@@ -320,21 +331,30 @@
     @include story-header
     text-align: right
     width: 75px
+    float: right
+    margin-left: 10px
     a
       opacity: 1.0
       filter: alpha(opacity = 100)
       color: #41a3f3
+      font-size: 14px
+      font-weight: 600
   .editable:hover
     background-color: transparent
   .subject.editable
     font-size: 1rem - rem-calc(3px)
-    height: 42px
-    line-height: 13px
-    margin-top: 0
-    overflow: hidden
-    padding: 2px
-    width: 81px
-
+    margin-top: 0        
+    display: block !important
+    box-sizing: content-box !important
+    line-height: 1.42857143 !important
+    max-height: 4.28571429em !important
+    overflow: hidden !important
+    margin-bottom: 20px !important
+    width: auto !important
+    height: auto !important
+    padding: 0 !important
+.task_type, .task_priority
+    display: inline-block
 .story
   .story-footer
     .assigned_to_id
@@ -345,7 +365,12 @@
       float: right
 .work_package
   .assigned_to_id.editable
-    @include story-footer
+    width: auto !important
+    display: inline-block
+    float: right !important
+    margin-top: 0 !important
+    padding: 0 !important
+    font-size: 12px !important
     .t
       @include ellipsis
 
