--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -87,52 +87,99 @@ See doc/COPYRIGHT.rdoc for more details.
                             <% end %>
                         </ul>                        
                     </div>
-                       
-                    <% if @sprint.stories(@project).any? %>
-                      <% @sprint.stories(@project).each do |story| %>
-                      <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">                   
-                          <div class="wp-swimlane-header <%= isKanbanboard(@project) ? 'story-hide' : '' %>">                          
-                            <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
-                                <span class="wp-swimlane-avatar">
-                                <%= image_tag task_type_icon(story), class: "" %>
-                                </span>
-                                <%= work_package_link_or_empty(story) %>
-                                <span class="wp-info">
-                                    <span class="aui-lozenge"><%= story.status.name %></span>
-                                </span>
-                                <span class="wp-summary"> 
-                                    <%= story.subject %>
-                                </span>
-                            </div>
-                          </div>
 
-                          <div id="tasks">     
-                            <ul class="wp-columns">
-                                <% @statuses.each do |status| %>
-                                <% if isKanbanboard(@project) == false %>
-                                  <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
-                                      <%= render :partial => "rb_tasks/task",
-                                              :collection => story.tasks.select { |task| task.status.id == status.id } %>
-                                  </li>
-                                <% else %>
-                                  <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
-                                      <%= render :partial => "rb_tasks/task",
-                                              :collection => story.kanban_tasks.select { |task| task.status.id == status.id } %>
-                                  </li>
-                                <% end %>
-                                <% end %>        
-                              </ul>
-                          </div>
-                      </div>
+                    <%#-- SCRUM BOARD ++#%>   
+                    <% if @sprint.stories(@project).any? %>
+                        <% if isKanbanboard(@project) == false %>
+                          <% @sprint.stories(@project).each do |story| %>
+                            <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">                   
+                                <div class="wp-swimlane-header">                          
+                                  <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
+                                      <span class="wp-swimlane-avatar">
+                                      <%= image_tag task_type_icon(story), class: "" %>
+                                      </span>
+                                      
+                                      <%= work_package_link_or_empty(story) %>
+                                      <span class="wp-info">
+                                          <span class="aui-lozenge"><%= story.status.name %></span>
+                                      </span>
+                                      <span class="wp-summary"> 
+                                          <%= story.subject %>
+                                      </span>
+                                  </div>
+                                </div>
+
+                                <div id="tasks">     
+                                  <ul class="wp-columns">
+                                      <% @statuses.each do |status| %>
+                                        <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                                            <%= render :partial => "rb_tasks/task",
+                                                    :collection => story.tasks.select { |task| task.status.id == status.id } %>
+                                        </li>
+                                      <% end %>
+                                    </ul>
+                                </div>
+                            </div>
+                          <% end %>
+                        <% end %>
+                    <% else %>
+                         <div class="no-data">
+                            <div class="no-data-content">
+                              <span class="no-data-img"></span>
+                              <span class="no-data-title">There are no tasks for this scrum board</span>
+                            </div>
+                        </div>
+                    <% end %>
+
+                    <%#-- KANBAN BOARD ++#%>
+                    <% if @sprint.stories(@project).any? %>
+                       <% if isKanbanboard(@project) == true %>
+                            <div class="wp-swimlane wp-first">
+                              <div id="tasks">     
+                                  <ul class="wp-columns">
+                                      <% @statuses.each do |status| %>
+                                        <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="_<%= status.id %>">
+                                          <% @sprint.stories(@project).each do |story| %>
+                                          <% if story.status.id == status.id %>    
+                                              <% prevent_edit = User.current.allowed_to?(:edit_work_packages, defined?(project) ? project : story.project) ? '' : 'prevent_edit'%>
+                                              <div class="model work_package task <%= color_contrast_class(story) %> <%= prevent_edit %> <%= mark_if_closed(story) %>" id="work_package_<%= story.id %>" <%= build_inline_style(story) %>>
+                                                <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= story.id %>><%= story.subject %></div>
+                                                
+                                                <div class="task_type"><%= image_tag task_type_icon(story), class: "" %></div>
+                                                <div class="task_priority"><%= image_tag task_priority_icon(story), class: "" %></div>
+                                                <div class="remaining_hours editable<%= ' empty' if remaining_hours(story).blank? %>" fieldname="remaining_hours"><%= remaining_hours(story) %></div>
+                                                <div class="id">
+                                                  <div class="t"><%= work_package_link_or_empty(story) %></div>
+                                                  <div class="v"><%= id_or_empty(story) %></div>
+                                                </div>
+                                                <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= story.id %>>
+                                                  <div class="t"><%= assignee_name_or_empty(story) %></div>
+                                                  <div class="v"><%= assignee_id_or_empty(story) %></div>
+                                                </div>  
+                                                <div class="indicator"> </div>
+                                                <div class="meta">
+                                                  <div class="story_id"><%= story.parent_id %></div>
+                                                  <div class="status_id"><%= story.status_id %></div>
+                                                  <%= render :partial => "shared/model_errors", :object => story.errors %>
+                                                </div>
+                                              </div>
+                                          <% end %>
+                                           <% end %>
+                                        </li>
+                                      <% end %>
+                                  </ul>
+                              </div>
+                            </div>
                       <% end %>
                     <% else %>
                          <div class="no-data">
                             <div class="no-data-content">
                               <span class="no-data-img"></span>
-                              <span class="no-data-title">There are no tasks for this board</span>
+                              <span class="no-data-title">There are no tasks for this kanban board</span>
                             </div>
                         </div>
                     <% end %>
+
                 </div>
             </div>
         </div>
