scroll bar related css change

--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -399,7 +399,7 @@
             padding-right: 32px
             #wp-pool 
                 background: #fff
-                overflow-y: auto
+                overflow: hidden
                 position: relative
                 z-index: 1
                 box-sizing: border-box
