--- a/app/assets/stylesheets/backlogs/taskboard.sass
+++ b/app/assets/stylesheets/backlogs/taskboard.sass
@@ -456,21 +456,46 @@
     margin: 0 5px 0 0
     word-wrap: break-word
     padding: 0
+.wp-swimlane
+  &.wp-closed
+    #tasks
+      visibility: hidden
+      height: 1px
+    .wp-iconfont-expanded::before
+      content: "\f107" !important
 .wp-swimlane-header
   font-size: 14px
   line-height: 1.3
   color: #253858
   margin: 0 20px 0 0
   overflow: hidden
-  padding-left: 13px
+  padding-left: 25px
   position: relative
   .wp-expander
     bottom: 0
     cursor: pointer
-    left: 0
+    left: 10px
     position: absolute
-    top: 0
+    top: 8px
     width: 12px
+    &:focus
+      outline: 0
+    .wp-iconfont
+      //margin-top: 10px
+      //margin: 10px 0 0 -10px
+      &.wp-iconfont-expanded::before
+          content: "\f115"
+          font-family: "openproject-icon-font" !important
+          font-style: normal !important
+          font-weight: normal !important
+          font-variant: normal !important
+          text-transform: none !important
+          text-decoration: none !important
+          speak: none
+          line-height: 1
+          -webkit-font-smoothing: antialiased
+          -moz-osx-font-smoothing: grayscale
+          font-size: 0.6rem
   .wp-heading
     display: inline-block
     margin: 10px 0 0 !important
