--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -92,8 +92,11 @@ See doc/COPYRIGHT.rdoc for more details.
                     <% if @sprint.stories(@project).any? %>
                         <% if isKanbanboard(@project) == false %>
                           <% @sprint.stories(@project).each do |story| %>
-                            <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>">                   
-                                <div class="wp-swimlane-header">                          
+                            <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>"> 
+                              <div class="wp-swimlane-header">
+                                <div role="button" tabindex="0" class="wp-expander">
+                                  <span class="wp-iconfont wp-iconfont-expanded"></span>
+                                </div>                          
                                   <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
                                       <span class="wp-swimlane-avatar">
                                       <%= image_tag task_type_icon(story), class: "" %>
