--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -133,7 +133,12 @@ See doc/COPYRIGHT.rdoc for more details.
                                       <% @statuses.each do |status| %>
                                         <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="_<%= status.id %>">
                                           <% @sprint.stories(@project).each do |story| %>
-                                          <% if story.status.id == status.id %>    
+                                          <%= story.id %>
+                                          <%= "GOES TESTTTTTTTTTT" %> 
+                                          <%= story.status.id %>
+                                          <%= status.id %>
+                                          <% if story.status.id == status.id %>
+                                              <%= "GOES HEREEEEEEEEEE" %>    
                                               <% prevent_edit = User.current.allowed_to?(:edit_work_packages, defined?(project) ? project : story.project) ? '' : 'prevent_edit'%>
                                               <div class="model work_package task <%= color_contrast_class(story) %> <%= prevent_edit %> <%= mark_if_closed(story) %>" id="work_package_<%= story.id %>" <%= build_inline_style(story) %>>
                                                 <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= story.id %>><%= story.subject %></div>
