--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -89,91 +89,105 @@ See doc/COPYRIGHT.rdoc for more details.
                     </div>
 
                     <%#-- SCRUM BOARD ++#%>
-                        <% if isKanbanboard(@project) == false %>
-                          <% @sprint.stories(@project).each do |story| %>
-                            <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>"> 
-                              <div class="wp-swimlane-header">
-                                <div role="button" tabindex="0" class="wp-expander">
-                                  <span class="wp-iconfont wp-iconfont-expanded"></span>
-                                </div>                          
-                                  <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
-                                      <span class="wp-swimlane-avatar">
-                                      <%= image_tag task_type_icon(story), class: "" %>
-                                      </span>
-                                      
-                                      <%= work_package_link_or_empty(story) %>
-                                      <span class="wp-info">
-                                          <span class="aui-lozenge"><%= story.status.name %></span>
-                                      </span>
-                                      <span class="wp-summary"> 
-                                          <%= story.subject %>
-                                      </span>
-                                  </div>
+                    <% if isKanbanboard(@project) == false %>
+                      <% if @sprint.stories(@project).any? %>
+                        <% @sprint.stories(@project).each do |story| %>
+                          <div class="wp-swimlane wp-first <%= story_html_id_or_empty(story) %>"> 
+                            <div class="wp-swimlane-header">
+                              <div role="button" tabindex="0" class="wp-expander">
+                                <span class="wp-iconfont wp-iconfont-expanded"></span>
+                              </div>                          
+                                <div class="wp-heading story <%= mark_if_closed(story) %>" id="<%= story_html_id_or_empty(story) %>">
+                                    <span class="wp-swimlane-avatar">
+                                    <%= image_tag task_type_icon(story), class: "" %>
+                                    </span>
+                                    
+                                    <%= work_package_link_or_empty(story) %>
+                                    <span class="wp-info">
+                                        <span class="aui-lozenge"><%= story.status.name %></span>
+                                    </span>
+                                    <span class="wp-summary"> 
+                                        <%= story.subject %>
+                                    </span>
                                 </div>
+                              </div>
 
-                                <div id="tasks">     
-                                  <ul class="wp-columns">
-                                      <% @statuses.each do |status| %>
-                                        <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
-                                            <%= render :partial => "rb_tasks/task",
-                                                    :collection => story.tasks.select { |task| task.status.id == status.id } %>
-                                        </li>
-                                      <% end %>
-                                    </ul>
-                                </div>
-                            </div>
-                          <% end %>
+                              <div id="tasks">     
+                                <ul class="wp-columns">
+                                    <% @statuses.each do |status| %>
+                                      <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="<%= story.id %>_<%= status.id %>">
+                                          <%= render :partial => "rb_tasks/task",
+                                                  :collection => story.tasks.select { |task| task.status.id == status.id } %>
+                                      </li>
+                                    <% end %>
+                                  </ul>
+                              </div>
+                          </div>
                         <% end %>
+                      <% else %>
+                          <div class="no-data">
+                            <div class="no-data-content">
+                              <span class="no-data-img"></span>
+                              <span class="no-data-title">There are no tasks for this scrum board</span>
+                            </div>
+                          </div>
+                      <% end %>
+                    <% end %>
+                   
 
                     <%#-- KANBAN BOARD ++#%>
-
-                      <%= "1" %>
-                       <% if isKanbanboard(@project) == true %>
-                            <%= "2" %> 
+                    <% if isKanbanboard(@project) == true %>
+                      <% if @sprint.stories(@project).any? %>
                             <div class="wp-swimlane wp-first">
                               <div id="tasks">     
                                   <ul class="wp-columns">
                                       <% @statuses.each do |status| %>
-                                        <%= "3" %> 
                                         <li class="wp-column swimlane list <%= status.is_closed? ? 'closed' : '' %>" id="_<%= status.id %>">
                                           <% @sprint.stories(@project).each do |story| %>
-                                          <%= story.id %>
-                                          <%= "4" %> 
-                                          <%= story.status.id %>
-                                          <%= status.id %>
-                                          <% if story.status.id == status.id %>
-                                              <%= "5" %>    
-                                              <% prevent_edit = User.current.allowed_to?(:edit_work_packages, defined?(project) ? project : story.project) ? '' : 'prevent_edit'%>
-                                              <div class="model work_package task <%= color_contrast_class(story) %> <%= prevent_edit %> <%= mark_if_closed(story) %>" id="work_package_<%= story.id %>" <%= build_inline_style(story) %>>
-                                                <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= story.id %>><%= story.subject %></div>
-                                                
-                                                <div class="task_type"><%= image_tag task_type_icon(story), class: "" %></div>
-                                                <div class="task_priority"><%= image_tag task_priority_icon(story), class: "" %></div>
-                                                <div class="remaining_hours editable<%= ' empty' if remaining_hours(story).blank? %>" fieldname="remaining_hours"><%= remaining_hours(story) %></div>
-                                                <div class="id">
-                                                  <div class="t"><%= work_package_link_or_empty(story) %></div>
-                                                  <div class="v"><%= id_or_empty(story) %></div>
+                                            <% if story.status.id == status.id %>    
+                                                <% prevent_edit = User.current.allowed_to?(:edit_work_packages, defined?(project) ? project : story.project) ? '' : 'prevent_edit'%>
+                                                <div class="model work_package task <%= color_contrast_class(story) %> <%= prevent_edit %> <%= mark_if_closed(story) %>" id="work_package_<%= story.id %>" <%= build_inline_style(story) %>>
+                                                  <div class="id">
+                                                    <div class="t"><%= work_package_link_or_empty(story) %></div>
+                                                    <div class="v"><%= id_or_empty(story) %></div>
+                                                  </div>
+
+                                                  <div class="task_type"><%= image_tag task_type_icon(story), class: "" %></div>
+                                                  <div class="task_priority"><%= image_tag task_priority_icon(story), class: "" %></div>
+
+                                                  <div class="subject editable" fieldtype="textarea" fieldname="subject" field_id=<%= story.id %>><%= story.subject %></div>
+
+                                                  <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= story.id %>>
+                                                    <div class="t"><%= assignee_name_or_empty(story) %></div>
+                                                    <div class="v"><%= assignee_id_or_empty(story) %></div>
+                                                  </div>
+
+                                                  <div class="remaining_hours editable<%= ' empty' if remaining_hours(story).blank? %>" fieldname="remaining_hours"><%= remaining_hours(story) %></div>
+
+                                                    
+                                                  <div class="indicator"> </div>
+                                                  <div class="meta">
+                                                    <div class="story_id"><%= story.parent_id %></div>
+                                                    <div class="status_id"><%= story.status_id %></div>
+                                                    <%= render :partial => "shared/model_errors", :object => story.errors %>
+                                                  </div>
                                                 </div>
-                                                <div class="assigned_to_id editable" fieldtype="select" fieldname="assigned_to_id" field_id=<%= story.id %>>
-                                                  <div class="t"><%= assignee_name_or_empty(story) %></div>
-                                                  <div class="v"><%= assignee_id_or_empty(story) %></div>
-                                                </div>  
-                                                <div class="indicator"> </div>
-                                                <div class="meta">
-                                                  <div class="story_id"><%= story.parent_id %></div>
-                                                  <div class="status_id"><%= story.status_id %></div>
-                                                  <%= render :partial => "shared/model_errors", :object => story.errors %>
-                                                </div>
-                                              </div>
+                                            <% end %>
                                           <% end %>
-                                           <% end %>
                                         </li>
                                       <% end %>
                                   </ul>
                               </div>
                             </div>
+                      <% else %>
+                        <div class="no-data">
+                          <div class="no-data-content">
+                            <span class="no-data-img"></span>
+                            <span class="no-data-title">There are no tasks for this kanban board</span>
+                          </div>
+                        </div>
                       <% end %>
-
+                    <% end %>
                 </div>
             </div>
         </div>
